Play with grpc/connect and refactor echo server
