# internal/web/openapi/server.gen.go
@@ -1,105 +1,0 @@
-// Package openapi provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/deepmap/oapi-codegen version v1.15.0 DO NOT EDIT.
-package openapi
-
-import (
-	"fmt"
-	"net/http"
-
-	"github.com/labstack/echo/v4"
-	"github.com/oapi-codegen/runtime"
-)
-
-// ServerInterface represents all server handlers.
-type ServerInterface interface {
-	// Create game
-	// (POST /games)
-	CreateGame(ctx echo.Context) error
-	// Show game
-	// (GET /games/{id})
-	ShowGame(ctx echo.Context, id GameID) error
-	// Perform next play
-	// (POST /games/{id}/plays)
-	CreatePlay(ctx echo.Context, id GameID) error
-}
-
-// ServerInterfaceWrapper converts echo contexts to parameters.
-type ServerInterfaceWrapper struct {
-	Handler ServerInterface
-}
-
-// CreateGame converts echo context to params.
-func (w *ServerInterfaceWrapper) CreateGame(ctx echo.Context) error {
-	var err error
-
-	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.CreateGame(ctx)
-	return err
-}
-
-// ShowGame converts echo context to params.
-func (w *ServerInterfaceWrapper) ShowGame(ctx echo.Context) error {
-	var err error
-	// ------------- Path parameter "id" -------------
-	var id GameID
-
-	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
-	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
-	}
-
-	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.ShowGame(ctx, id)
-	return err
-}
-
-// CreatePlay converts echo context to params.
-func (w *ServerInterfaceWrapper) CreatePlay(ctx echo.Context) error {
-	var err error
-	// ------------- Path parameter "id" -------------
-	var id GameID
-
-	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
-	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
-	}
-
-	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.CreatePlay(ctx, id)
-	return err
-}
-
-// This is a simple interface which specifies echo.Route addition functions which
-// are present on both echo.Echo and echo.Group, since we want to allow using
-// either of them for path registration
-type EchoRouter interface {
-	CONNECT(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
-	DELETE(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
-	GET(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
-	HEAD(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
-	OPTIONS(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
-	PATCH(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
-	POST(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
-	PUT(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
-	TRACE(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
-}
-
-// RegisterHandlers adds each server route to the EchoRouter.
-func RegisterHandlers(router EchoRouter, si ServerInterface) {
-	RegisterHandlersWithBaseURL(router, si, "")
-}
-
-// Registers handlers, and prepends BaseURL to the paths, so that the paths
-// can be served under a prefix.
-func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL string) {
-
-	wrapper := ServerInterfaceWrapper{
-		Handler: si,
-	}
-
-	router.POST(baseURL+"/games", wrapper.CreateGame)
-	router.GET(baseURL+"/games/:id", wrapper.ShowGame)
-	router.POST(baseURL+"/games/:id/plays", wrapper.CreatePlay)
-
-}
